# ChangeLog for x11-plugins/gkrellkam
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellkam/ChangeLog,v 1.9 2004/07/09 22:53:24 slarti Exp $

  09 Jul 2004; Tom Martin <slarti@gentoo.org> gkrellkam-2.0.0.ebuild:
  Marked ~amd64.

  15 Jan 2004; Aron Griffis <agriffis@gentoo.org> gkrellkam-2.0.0.ebuild:
  stable on alpha

*gkrellkam-2.0.0 (08 Oct 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gkrellkam-0.3.4 (2 Apr 2002)
  11 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Added PPC to KEYWORDS.

  29 Aug 2002; Seemant Kulleen <seemant@gentoo.org> gkrellkam-0.3.4.ebuild
  files/digest-gkrellkam-0.3.4 ChangeLog * :

  Relocated to xll-plugins

  2 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gkrellkam-0.3.4.ebuild :

  Bump to new version which contains bugfixes.

*gkrellkam-0.2.4 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.