@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellkam/Attic/gkrellkam-0.3.4.ebuild,v 1.12 2004/06/24 22:53:24 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellkam/Attic/gkrellkam-0.3.4.ebuild,v 1.13 2005/03/25 16:43:09 kugelfang Exp $
 
 MY_P=${P/-/_}
 IUSE=""
